// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://www.ucp.ac.uk"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  University Centre Peterborough
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://www.ucp.ac.uk"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  University Centre Peterborough
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://www.ucp.ac.uk"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  University Centre Peterborough
</a>
`;
